[tool.poetry]
name = "urlprobe"
version = "0.1.0"
description = "A tool to request a specified `url` and return the response."
authors = ["Andrew Vella"]
readme = "README.md"
packages = [{include = "urlprobe", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
rich = "^14.0.0"
flask = "^3.0.0"
toml = "^0.10.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
flake8 = "^7.0.0"
pre-commit = "^4.0.0"
mypy = "^1.7.1"
types-requests = "^2.31.0"
types-toml = "^0.10.8"
python-semantic-release = "^8.0.0"

[tool.poetry.scripts]
urlprobe = "urlprobe.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
build_command = "poetry build"
upload_dists = true
tag_commit = true
tag_format = "{version}"
commit_parser = "angular"
changelog_file = "CHANGELOG.md"
